--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "zrk",
+  "name": "scss-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "compile": "node-sass ./scss/main.scss ./css/style.css -w",
     "minify": "node-sass ./scss/main.scss ./css/style.min.css -w --output-style compressed",
-    "watch": "concurrently \"npm run compile\" \"npm run minify\""
+    "prefx": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.css -o ./css/style.css --no-map -w",
+    "prefx:min": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.min.css -o ./css/style.min.css --no-map -w",
+    "watch": "npm run compile && npm run minify && npm run prefx && npm run prefx:min"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.3.1",
     "concurrently": "^4.0.1",
     "cssnano": "^4.1.7",
     "node-sass": "^4.9.3",
+    "postcss": "^7.0.5",
     "postcss-cli": "^6.0.1"
   }
 }
