--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "compile": "node-sass ./scss/main.scss ./css/style.css -w",
-    "minify": "node-sass ./scss/main.scss ./css/style.min.css -w --output-style compressed",
+    "minify": "node-sass ./scss/main.scss ./css/style.css -w --output-style compressed",
     "prefx": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.css -o ./css/style.css --no-map -w",
     "prefx:min": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.min.css -o ./css/style.min.css --no-map -w",
-    "watch": "npm-run-all compile minify prefx prefx:min"
+    "watch": "concurrently \"npm run compile\"  \"npm run minify\"  \"npm run prefx\" \"npm run prefx:min\""
   },
   "author": "",
   "license": "ISC",
