--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "compile": "node-sass ./scss/main.scss ./css/style.css -w",
-    "minify": "node-sass ./scss/main.scss ./css/style.css -w --output-style compressed",
+    "compile:min": "node-sass ./scss/main.scss ./css/style.min.css -w --output-style compressed",
     "prefx": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.css -o ./css/style.css --no-map -w",
-    "prefx:min": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.min.css -o ./css/style.min.css --no-map -w",
-    "watch": "concurrently \"npm run compile\"  \"npm run minify\"  \"npm run prefx\" \"npm run prefx:min\""
+    "prefx:min": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.min.css -o ./css/style.min.css --no-map -w"
   },
   "author": "",
   "license": "ISC",
@@ -17,9 +16,7 @@
     "concurrently": "^4.0.1",
     "cssnano": "^4.1.7",
     "node-sass": "^4.9.3",
-    "npm-run-all": "^4.1.3",
     "postcss": "^7.0.5",
-    "postcss-cli": "^6.0.1",
-    "run-all": "^1.0.1"
+    "postcss-cli": "^6.0.1"
   }
 }
