--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "compile": "node-sass ./scss/main.scss ./css/style.css -w",
     "compile:min": "node-sass ./scss/main.scss ./css/style.min.css -w --output-style compressed",
-    "prefx": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.css -o ./css/style.css --no-map -w",
-    "prefx:min": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.min.css -o ./css/style.min.css --no-map -w",
-    "build:compile": "node-sass ./scss/main.scss ./css/style.css && node-sass ./scss/main.scss ./css/style.min.css --output-style compressed"
+    "prefx": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.css -o ./css/style.css --no-map",
+    "prefx:min": "postcss --use autoprefixer -b \"last 10 versions\" ./css/style.min.css -o ./css/style.min.css --no-map",
+    "build:compile": "node-sass ./scss/main.scss ./css/style.css && node-sass ./scss/main.scss ./css/style.min.css --output-style compressed",
+    "build:autoprefix": "npm run prefx && npm run prefx:min",
+    "build": "run-s build:**"
   },
   "author": "",
   "license": "ISC",
